--- a/handson-frontend/package.json
+++ b/handson-frontend/package.json
@@ -9,11 +9,13 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.8.2",
+    "moment": "^2.30.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "tailwindcss": "^4.0.12",
     "web-vitals": "^2.1.4"
   },
