--- a/handson-backend/.env
+++ b/handson-backend/.env
@@ -1,3 +1,7 @@
 PORT=5000
 MONGO_URI=mongodb://localhost:27017/handson
 JWT_SECRET=55trbdth
+
+CLOUD_NAME= df5rvx2id
+API_KEY = 514549976724715
+API_SECRET = QZUvqrDHEpzepzrHe_1uk69z9ng
