Make the project live

--- a/handson-backend/.env
+++ b/handson-backend/.env
@@ -1,4 +1,5 @@
 PORT=5000
+#MONGO_URI= mongodb+srv://question_banker:lbkvvvW85sCSXnnS@cluster0.xujqvfi.mongodb.net/handson
 MONGO_URI=mongodb://localhost:27017/handson
 JWT_SECRET=55trbdth
 
